Prevent in source builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_EXTENSIONS FALSE)
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
 set(BUILD_SHARED_LIBS FALSE)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+include(PreventInSourceBuilds)
 
 add_subdirectory(src)
