Basic unit testing setup with gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,8 @@ include(StaticAnalyzers)
 include(Sanitizers)
 
 add_subdirectory(src)
+include(CTest)
+
+if(BUILD_TESTING)
+    add_subdirectory(test)
+endif()
