--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Install dependencies
         run: DEBIAN_FRONTEND=noninteractive sudo apt-get update &&
           sudo apt-get install -y --no-install-recommends git cmake make ${{ matrix.compiler[0] }}
+      - uses: actions/cache@v3
+        with:
+          path: ./build
+          key: ${{matrix.os}}-${{matrix.compiler[0]}}-${{matrix.build-type}}
       - name: Setup CMake
         run: CXX=${{matrix.compiler[1]}} cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build-type}}
       - name: Build
