--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Install dependencies
         run: DEBIAN_FRONTEND=noninteractive sudo apt-get update &&
           sudo apt-get install -y --no-install-recommends git cmake make ${{ matrix.compiler[0] }}
+          libcurl4-openssl-dev libuv1-dev zlib1g-dev
       - uses: actions/cache@v3
         with:
           path: ./build
