--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,4 +1,10 @@
 file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} CONFIGURE_DEPENDS *.[ch]pp)
 add_library(core ${SOURCES})
 target_include_directories(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(core PUBLIC thrill lifthttp)
+target_include_directories(core SYSTEM PUBLIC
+    ${OPENCV_CONFIG_FILE_INCLUDE_DIR}
+    ${OPENCV_MODULE_opencv_core_LOCATION}/include
+    ${OPENCV_MODULE_opencv_imgproc_LOCATION}/include
+    ${OPENCV_MODULE_opencv_imgcodecs_LOCATION}/include
+)
+target_link_libraries(core PUBLIC thrill lifthttp opencv_imgcodecs)
