--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,9 @@ jobs:
           path: ./build
           key: ${{matrix.os}}-${{matrix.compiler[0]}}-${{matrix.build-type}}
       - name: Setup CMake
-        run: CXX=${{matrix.compiler[1]}} cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build-type}}
+        run:
+          CXX=${{matrix.compiler[1]}} cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build-type}}
+          -DUSE_CLANG_FORMAT=OFF -DUSE_CLANG_TIDY=OFF -DUSE_IWYU=OFF -DUSE_DOXYGEN=OFF
       - name: Build
         run: cmake --build build --config ${{ matrix.build-type}} --parallel $(nproc)
       - name: Test
